--- a/pub_html/styleguide/styleguide_css/styleguide_main.css
+++ b/pub_html/styleguide/styleguide_css/styleguide_main.css
@@ -24,6 +24,7 @@ section{
 
 .element-block{
   width: 30rem;
+  margin-bottom: 50px;
 }
 
 .code-block{
@@ -47,42 +48,20 @@ section{
 }
 
 /* header stuff */
-header{
-  /* position: sticky; */
-  /* top: 0; */
-  height: 2rem;
-  z-index: 1;
-  /* overflow: hidden; */
-}
-
 .header-white-background{
   width: 100%;
 }
 
-.header-home-nav{
-  position: absolute;
-  top: 3rem;
-  left: 3rem;
-  z-index: 3;
+#header-nav{
+  top: 35px;
 }
 
-.header-home-nav a{
-  font-family: 'Montserrat', sans-serif;
-  font-size: 2rem;
-  font-weight: 700;
-  text-decoration: none;
-  color: rgba(255,0,0, 0.7);
-  letter-spacing: 2px;
-    /* transition:  */
+#header-nav-2 a{
+  font-size: 1.5rem;
 }
 
-.header-home-nav a:hover, .header-home-nav a:focus{
-  text-decoration: line-through;
-} 
-
-.header-right-nav2{
+#header-right-nav2{
   position: absolute;
-  top: -160px;
   right: 4rem;
   text-align: left;
   background-color: white;
@@ -94,12 +73,6 @@ header{
     -ms-transition: .5s ease-in;
     transition: .5s ease-in;
   display: none;
-}
-
-.active{
-  top: 60px;
-  box-shadow: 0 5px 5px rgba(100, 100, 100, 0.3);
-  display: block;
 }
 
 .header-right-nav2 a{
